# opengenome

./: .gitignore  Cargo.toml  LICENSE  README.md  opengenome.desktop  preview.sh  publish-instructions.md  publish.sh  start.sh  startdev.sh
core/: Cargo.toml
core/src/: inner.rs  lib.rs
core/tabs/: tabs.toml
core/tabs/assembly/: tab_data.toml
core/tabs/assembly/scripts/: fetch_gatk_grch38_bundle.sh  prepare_open_genome_run.sh  prepare_sarek_run.sh  run_open_genome.sh
core/tabs/genome-workflow/: tab_data.toml
core/tabs/genome-workflow/scripts/: fetch_clair3_models.sh  index_grch38_reference.sh  prepare_denovo_assembly_run.sh  prepare_open_genome_run.sh  reference_bundle_status.sh  run_denovo_assembly.sh  run_denovo_assembly_test.sh  run_existing_vcf_report.sh  run_open_genome.sh  run_open_genome_test.sh  run_reference_analysis.sh
core/tabs/learn-more/: tab_data.toml
core/tabs/learn-more/scripts/: conda_and_packages.sh  human_reference_sources.sh  tool_sources_and_papers.sh
core/tabs/open-genome/: README.md  manifest.default.toml
core/tabs/open-genome/lib/: conda_install_module.sh  manifest_cli.py  report_compiler.py  report_compiler_test.py  result_digest.py  result_digest_test.py  sample_scan.py  sample_scan_test.py  setup_status.py  setup_status_test.py
core/tabs/open-genome/pipelines/: pipeline-contract.md
core/tabs/reports/: tab_data.toml
core/tabs/reports/scripts/: free_v1_sources.sh  report_boundaries.sh
core/tabs/resources/: tab_data.toml
core/tabs/resources/scripts/: setup_annotation_cache.sh
core/tabs/setup/: tab_data.toml
core/tabs/setup/scripts/: conda_install_all_recommended.sh  first_time_setup.sh  install_private_miniforge.sh  open_genome_lib.sh  open_genome_lib_test.sh  run_human_validation_dataset.sh  scan_sequencing_folder.sh  (+9 more)
core/tabs/variant-detection/: tab_data.toml
core/tabs/visualization/: tab_data.toml
core/tabs/welcome/: tab_data.toml
tui/: Cargo.toml
tui/src/: cli.rs  file_picker.rs  filter.rs  floating_text.rs  logo.rs  main.rs  running_command.rs  setup_status.rs  setup_wizard.rs  state.rs
(+90 files in other folders)
