[package]
name = "opengenome_core"
description = "Core tab, command, and config model for Open Genome."
repository = "https://github.com/Jakeelamb/opengenome/tree/main/core"
edition = "2021"
version.workspace = true
license.workspace = true
authors.workspace = true
include = ["src/*.rs", "Cargo.toml", "tabs/**"]

[dependencies]
ego-tree = "0.11.0"
include_dir = "0.7.4"
serde = { version = "1.0.215", features = ["derive"] }
temp-dir = "0.2.0"
toml = { version = "1.1.2", features = ["parse", "serde"] }
which = "8.0.2"
