[package]
name = "opengenome_tui"
description = "Open Genome terminal utility for setting up and running genomics workflows."
documentation = "https://github.com/Jakeelamb/opengenome"
readme = "../README.md"
edition = "2021"
license.workspace = true
authors.workspace = true
repository = "https://github.com/Jakeelamb/opengenome/tree/main/tui"
version.workspace = true
include = [
    "src/*.rs",
    "Cargo.toml",
    "cool_tips.txt",
    "assets/open_genome_logo.png",
]

[[bin]]
name = "opengenome"
path = "src/main.rs"

[features]
default = ["tips"]
tips = []

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
opengenome_core = { version = "26.5.21", path = "../core" }
nix = { version = "0.31.3", features = ["user"] }
oneshot = { version = "0.2.1", features = ["std"], default-features = false }
portable-pty = "0.9.0"
ratatui = { version = "0.30.0", features = ["crossterm"], default-features = false }
ratatui-image = { version = "11.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
time = { version = "0.3.47", features = ["formatting", "local-offset", "macros"], default-features = false }
tree-sitter-bash = "0.25.1"
tree-sitter-highlight = "0.26.8"
tui-term = { version = "0.3.4", default-features = false, features = ["vt100"] }
unicode-width = { version = "0.2.0", default-features = false }
